feat:background play on hover added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <!-- Card -->
                         <div class="col">
                             <i class="fa-regular fa-circle-play play-hover"></i>
+                            <div class="background-hover"></div>
                             <div class="card">
                                 <img src="./img/metal_lifting.jpg" alt="">
                                 <h3 class="card-title">Heavy metal</h3><br>
@@ -93,6 +94,7 @@
 
                         <div class="col">
                             <i class="fa-regular fa-circle-play play-hover"></i>
+                            <div class="background-hover"></div>
                             <div class="card">
                                 <img src="./img/stranger.jpeg" alt="">
                                 <h3 class="card-title">Stranger things, Vol. 1 (A Netflix Original Series Soundtrack)
@@ -102,6 +104,7 @@
                         </div>
                         <div class="col">
                             <i class="fa-regular fa-circle-play play-hover"></i>
+                            <div class="background-hover"></div>
                             <div class="card">
                                 <img src="./img/aquietplace.jpeg" alt="">
                                 <h3 class="card-title">A quiet place</h3><br>
@@ -110,6 +113,7 @@
                         </div>
                         <div class="col">
                             <i class="fa-regular fa-circle-play play-hover"></i>
+                            <div class="background-hover"></div>
                             <div class="card">
                                 <img src="./img/split.jpeg" alt="">
                                 <h3 class="card-title">Split</h3><br>
@@ -118,6 +122,7 @@
                         </div>
                         <div class="col">
                             <i class="fa-regular fa-circle-play play-hover"></i>
+                            <div class="background-hover"></div>
                             <div class="card">
                                 <img src="./img/cure.jpeg" alt="">
                                 <h3 class="card-title">A cure for wellness</h3><br>
@@ -126,6 +131,7 @@
                         </div>
                         <div class="col">
                             <i class="fa-regular fa-circle-play play-hover"></i>
+                            <div class="background-hover"></div>
                             <div class="card">
                                 <img src="./img/sinister.jpeg" alt="">
                                 <h3 class="card-title">Sinister</h3><br>
@@ -210,9 +216,8 @@
                 <div class="line-section">
                     <span class="time-line start-song">0:25</span>
                     <span class="line">
-                        <div class="line-inside">
-                            <div class="line-circle"></div>
-                        </div>
+                        <div class="line-inside"></div>
+                            <div class="dot"></div>
                     </span>
                     <span class="time-line end-song">4:35</span>
                 </div>
