feat: html structure adjusted, dot added on the song hover

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                     </div>
                     <!-- /Popular Artist -->
                 </div>
+            </section>
         </div>
     </section>
-    </div>
     <!-- /Main section -->
 
 
@@ -214,10 +214,10 @@
                 <i class="fa-solid fa-rotate-right margin-10 hover-bigger"></i>
                 <!-- line section -->
                 <div class="line-section">
+                    <div class="dot"></div>
+                    <div class="line-inside"></div>
                     <span class="time-line start-song">0:25</span>
                     <span class="line">
-                        <div class="line-inside"></div>
-                            <div class="dot"></div>
                     </span>
                     <span class="time-line end-song">4:35</span>
                 </div>
@@ -234,11 +234,10 @@
                 <i class="fas fa-desktop margin-10"></i>
                 <i class="fas fa-volume-up margin-10"></i>
             </div>
-            <span class="line-right">
-                <div class="line-inside-right">
-                    <div class="line-circle"></div>
-                </div>
-            </span>
+            <div class="line-right">
+                <span class="line-inside-right">
+                </span>
+            </div>
         </div>
         <!-- /right section song info -->
     </section>
